--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,25 +4,47 @@
 <link href="~/Content/custom%20search.css" rel="stylesheet" />
 <div  style="padding-top: 80px">
     <div class="container">
-	<div class="row">
-        <div class= "col-md-3 col-md-offset-3">
-            <img src="~/Images/Logo.png" />
+        <div class="row">
+            <div class="col-md-3 col-md-offset-3">
+                <img src="~/Images/Logo.png" />
+            </div>
         </div>
-	</div>
         <br />
         <div class="row">
-           <div id="custom-search-input">
-               <div class="col-md-6 col-md-offset-3">
-                <div class="input-group" style="margin-left:-20px">
-                    <input type="text" class="search-query form-control" autofocus placeholder="Search" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">
-                            <span class=" glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
+            <div id="custom-search-input">
+                <div class="col-md-6 col-md-offset-3">
+                    <form id="searchForm" action="home/SearchResults" onsubmit="return validate()" method="get">
+                        <div class="input-group" style="margin-left: -20px">
+                            <input id="q" name="q" type="text" class="search-query form-control" autofocus onfocus="fadeoutQueryError()" placeholder="Search" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-danger" type="submit">
+                                    <span class=" glyphicon glyphicon-search"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </form>
+                    <br />
+                    <div id="queryError" class="alert alert-error" style="color: #b94a48; background-color: #f2dede; border-color: #eed3d7; margin-right: 40px">
+                        <button style="margin-right: -40px; margin-top: -3px" type="button" class="close" aria-hidden="true" onclick="fadeoutQueryError()">&times;</button>
+                        <strong>ERROR..!</strong> Enter something to Search.
+                    </div>
                 </div>
-               </div>
             </div>
-         </div>
-	</div>
+        </div>
+    </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('#queryError').hide();
+    });
+    function validate() {
+        if (document.getElementById("q").value.length < 1) {
+            $('#queryError').fadeIn(500);
+            return false;
+        }
+        return true;
+    }
+    function fadeoutQueryError() {
+        $('#queryError').fadeOut(1000);
+    }
+</script>
